--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,8 @@ build-stamp:
 
 	# Build process
 	cd $(APPNAME)
-	qmake PREFIX=/usr ./$(APPNAME)/$(APPNAME).pro
+	#qmake PREFIX=/usr ./$(APPNAME)/$(APPNAME).pro
+	qmake -qt=opt-qt59 PREFIX=/usr ./$(APPNAME)/$(APPNAME).pro
 	make
 	# End of build process
 
