--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,7 @@ install: build
 		#cp $(CURDIR)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
 		#cp $(CURDIR)/$(APPNAME)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
 		###  Upstart start scrypt
-		cp $(CURDIR)/$(APPNAME)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
+		cp $(CURDIR)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
 
 		# Add here commands to install the package into debian/your_appname
 		$(MAKE) INSTALL_ROOT=$(DESTDIR) install
