--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,17 @@ install: build
 		#cp $(CURDIR)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
 		#cp $(CURDIR)/$(APPNAME)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
 		###  Upstart start scrypt
-		cp $(CURDIR)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
+		#cp $(CURDIR)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
+		echo 'description "radeon-profile-daemon Upstart"
+author "gogo"
+
+# start on startup
+start on runlevel [2345]
+stop on shutdown|reboot
+
+exec radeon-profile-daemon
+
+respawn' > $(DESTDIR)/etc/init/radeon-profile-daemon.conf					
 
 		# Add here commands to install the package into debian/your_appname
 		$(MAKE) INSTALL_ROOT=$(DESTDIR) install
