--- a/debian/rules
+++ b/debian/rules
@@ -64,7 +64,7 @@ install: build
 		#cp $(CURDIR)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
 
 		# Add here commands to install the package into debian/your_appname
-		$(MAKE) INSTALL_ROOT=$(DESTDIR) install
+		#$(MAKE) INSTALL_ROOT=$(DESTDIR) install
 # Build architecture-independent files here.
 binary-indep: build install
 # We have nothing to do by default.
