--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: gogo <trebelnik2@gmail.com>
 Uploaders: gogo <trebelnik2@gmail.com>
 Build-Depends: debhelper (>= 9),
                build-essential,
-               xserver-xorg-video-ati | xserver-xorg-video-amdgpu,
+               xserver-xorg-video-ati,
+               xserver-xorg-video-amdgpu,
                gcc,
                gdb,
                qt5-default,
@@ -17,6 +18,6 @@ Homepage: https://github.com/marazmista/radeon-profile-daemon
 
 Package: radeon-profile-daemon
 Architecture: any
-Depends: debhelper, build-essential, xserver-xorg-video-ati | xserver-xorg-video-amdgpu, gcc, gdb, qt5-default, libqt4-dev, qt4-qmake, qt5-qmake, radeon-profile
+Depends: xserver-xorg-video-ati | xserver-xorg-video-amdgpu, radeon-profile
 Description: Daemon for Radeon Profile
  AMD graphics card monitoring and tweaking tool.
