--- a/debian/rules
+++ b/debian/rules
@@ -44,7 +44,7 @@ install: build
 		mkdir $(DESTDIR)/usr/share
 		mkdir $(DESTDIR)/usr/bin
 		#cp $(CURDIR)/$(APPNAME)/radeon-profile-daemon $(DESTDIR)/usr/bin
-		cp -r $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/bin/
+		#cp -r $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/bin/
 		#cp $(CURDIR)/target/$(APPNAME)/$(APPNAME) $(DESTDIR)/usr/bin/
 		###  Systemd start scrypt
 		#cp $(CURDIR)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
@@ -65,6 +65,7 @@ install: build
 
 		# Add here commands to install the package into debian/your_appname
 		#$(MAKE) INSTALL_ROOT=$(DESTDIR) install
+		install -p -m 0755 $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/bin/
 # Build architecture-independent files here.
 binary-indep: build install
 # We have nothing to do by default.
