--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,6 @@ Homepage: https://github.com/marazmista/radeon-profile-daemon
 
 Package: radeon-profile-daemon
 Architecture: any
-Depends: xserver-xorg-video-ati | xserver-xorg-video-amdgpu, radeon-profile
+Depends: ${shlibs:Depends}, xserver-xorg-video-ati | xserver-xorg-video-amdgpu, radeon-profile
 Description: Daemon for Radeon Profile
  AMD graphics card monitoring and tweaking tool.
