--- a/debian/rules
+++ b/debian/rules
@@ -2,21 +2,23 @@
 #export DH_VERBOSE=1
 # This is the debhelper compatability version to use.
 
-#MAKEFLAGS="-j $(grep -c ^processor /proc/cpuinfo)"
+MY_MAKEFLAGS=
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  NUMJOBS=$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  MY_MAKEFLAGS=-j$(NUMJOBS)
+endif
 
 #export DH_COMPAT=3
 APPNAME := radeon-profile-daemon
 DESTDIR := $(CURDIR)/debian/$(APPNAME)
-#TR_DIR=$(CURDIR)/debian/$(APPNAME)/usr/share/qt4/translations
 
 build: build-stamp
 build-stamp:
 
 	# Build process
 	cd $(APPNAME)
-	#qmake PREFIX=/usr ./$(APPNAME)/$(APPNAME).pro
 	qmake -qt=opt-qt59 PREFIX=/usr ./$(APPNAME)/$(APPNAME).pro
-	make
+	make $(MY_MAKEFLAGS)
 	# End of build process
 
 	touch build-stamp
@@ -32,25 +34,16 @@ clean:
 install: build
 		dh_testdir
 		dh_testroot
-		dh_clean -k
+		dh_prep
 		dh_installdirs
-		###  Systemd directories
-		#mkdir $(DESTDIR)/lib
-		#mkdir $(DESTDIR)/lib/systemd
-		#mkdir $(DESTDIR)/lib/systemd/system
+		install -pdm755 $(DESTDIR)/usr/bin
 		###  Upstart directories
-		mkdir $(DESTDIR)/etc
-		mkdir $(DESTDIR)/etc/init
-		mkdir $(DESTDIR)/usr
-		mkdir $(DESTDIR)/usr/share
-		mkdir $(DESTDIR)/usr/bin
-		#cp $(CURDIR)/$(APPNAME)/radeon-profile-daemon $(DESTDIR)/usr/bin
-		cp $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/bin
-		###  Systemd start scrypt
-		#cp $(CURDIR)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
-		#cp $(CURDIR)/$(APPNAME)/extra/radeon-profile-daemon.service $(DESTDIR)/lib/systemd/system
+		install -pdm755 $(DESTDIR)/etc/init
+		install -pdm755 $(DESTDIR)/usr/share
+		###  Copy radeon-profile-daemon
+		install -Dm664 $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/bin/
 		###  Upstart start scrypt
-		#cp $(CURDIR)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
+		#install -Dm664  $(CURDIR)/extra/radeon-profile-daemon.conf $(DESTDIR)/etc/init
 		echo 'description "radeon-profile-daemon Upstart"' > $(DESTDIR)/etc/init/radeon-profile-daemon.conf
 		echo 'author "gogo"' >> $(DESTDIR)/etc/init/radeon-profile-daemon.conf
 		echo '' >> $(DESTDIR)/etc/init/radeon-profile-daemon.conf
@@ -62,8 +55,6 @@ install: build
 		echo '' >> $(DESTDIR)/etc/init/radeon-profile-daemon.conf
 		echo 'respawn' >> $(DESTDIR)/etc/init/radeon-profile-daemon.conf					
 
-		# Add here commands to install the package into debian/your_appname
-		$(MAKE) INSTALL_ROOT=$(DESTDIR) install
 # Build architecture-independent files here.
 binary-indep: build install
 # We have nothing to do by default.
