--- a/debian/rules
+++ b/debian/rules
@@ -50,6 +50,9 @@ install: build
 		echo 'ExecStart=/usr/bin/radeon-profile-daemon' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
 		echo 'ExecStop=/usr/bin/killall radeon-profile-daemon' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
 		echo 'ExecReload=/usr/bin/killall radeon-profile-daemon && /usr/bin/radeon-profile-daemon' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
+		echo '#Restart=always' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
+		echo '#RestartSec=5' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
+		echo '#Restart=on-failure' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
 		echo '' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
 		echo '[Install]' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
 		echo 'WantedBy=multi-user.target' >> $(DESTDIR)/lib/systemd/system/radeon-profile-daemon.service
