--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
                gdb,
                qt5-default,
                libqt4-dev,
-               qt4-qmake | qt5-qmake 
+               qt5-qmake 
 Standards-Version: 4.0.0
 Homepage: https://github.com/marazmista/radeon-profile-daemon
 
