--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 9),
                gcc,
                gdb,
                qt5-default,
-               libqt4-dev,
+               qtdeclarative5-dev,
                qt5-qmake 
 Standards-Version: 4.0.0
 Homepage: https://github.com/marazmista/radeon-profile-daemon
